# tesla_energy_controller

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  compose.yaml  pyproject.toml
deploy/: tesla-energy-controller-journald.conf  tesla-energy-controller-network-watchdog.service  tesla-energy-controller-network-watchdog.timer  tesla-energy-controller-network.service  tesla-energy-controller-tuya.service  tesla-energy-controller.service
docs/: tuya-smartlife-install.md
docs/presentation/: README.md  tesla-energy-controller-presentation.html
scripts/: bootstrap_raspberry_network.sh  build_tesla_control_arm64.sh  deploy_raspberry_pi.sh  generate_tesla_keys.sh  install_rpimonitor_raspberry_pi.sh  networkmanager_dispatcher.sh  package_raspberry_pi.sh  pair_tesla_ble.sh  provision_raspberry_pi.sh  provision_vimar_raspberry_pi.sh  raspberry_network_watchdog.sh  setup_solaredge_credentials.sh  tesla_oauth.py
src/tesla_energy_controller/: __init__.py  backup.py  config.py  controller.py  demand.py  diagnostics.py  energy.py  factories.py  live_status.py  main.py  models.py  runtime.py  schedule.py  smtp_mailer.py  solar.py  storage.py  tesla.py  tuya.py  vimar.py  web.py  web_runtime.py  wordpress_mailer.py
src/tesla_energy_controller/static/: dashboard.css  dashboard.js  theme-init.js
src/tesla_energy_controller/templates/: base.html  (+2 more)
tests/: test_controller.py  test_demand.py  test_energy.py  test_mailers.py  test_network_dispatcher.py  test_network_watchdog.py  test_schedule.py  test_solar.py  test_tesla.py  test_tuya.py  test_web.py
