[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tesla-energy-controller"
version = "0.1.0"
description = "Controllo dinamico della corrente di ricarica Tesla con misure SolarEdge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "astral>=3.2,<4",
  "flask>=3.1,<4",
  "httpx>=0.27,<1",
  "pymodbus>=3.7,<4",
  "solaredge>=1.1.1,<2",
  "waitress>=3,<4",
  "websocket-client>=1.8,<2",
  "zeroconf>=0.132,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
tesla-energy-controller = "tesla_energy_controller.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tesla_energy_controller"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
